@@ -1,19 +1,19 @@
 ^#!
 ^<\?(xml|xml-stylesheet).*>$
 ^\W*$
-^\W*Licensed to the Apache Software Foundation \(ASF\) under one$
-^\W*or more contributor license agreements.  See the NOTICE file$
-^\W*distributed with this work for additional information$
-^\W*regarding copyright ownership.  The ASF licenses this file$
-^\W*to you under the Apache License, Version 2.0 \(the$
-^\W*"License"\); you may not use this file except in compliance$
-^\W*with the License.  You may obtain a copy of the License at$
-^\W*$
-^\W*http://www.apache.org/licenses/LICENSE-2.0$
-^\W*$
-^\W*Unless required by applicable law or agreed to in writing,$
-^\W*software distributed under the License is distributed on an$
-^\W*"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY$
-^\W*KIND, either express or implied.  See the License for the$
-^\W*specific language governing permissions and limitations$
-^\W*under the License.$
+\W*Licensed to the Apache Software Foundation \(ASF\) under one$
+\W*or more contributor license agreements.  See the NOTICE file$
+\W*distributed with this work for additional information$
+\W*regarding copyright ownership.  The ASF licenses this file$
+\W*to you under the Apache License, Version 2.0 \(the$
+\W*"License"\); you may not use this file except in compliance$
+\W*with the License.  You may obtain a copy of the License at$
+\W*$
+\W*http://www.apache.org/licenses/LICENSE-2.0$
+\W*$
+\W*Unless required by applicable law or agreed to in writing,$
+\W*software distributed under the License is distributed on an$
+\W*"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY$
+\W*KIND, either express or implied.  See the License for the$
+\W*specific language governing permissions and limitations$
+\W*under the License.$
